Title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Drake Prebyl Portfolio
+description: This page showcases various programming projects I have worked on
